--- a/http-media.cabal
+++ b/http-media.cabal
@@ -46,6 +46,8 @@ library
   default-language: Haskell2010
   default-extensions:
     OverloadedStrings
+  other-extensions:
+    CPP
 
   exposed-modules:
     Network.HTTP.Media
@@ -71,6 +73,9 @@ test-suite test-http-media
   default-language: Haskell2010
   default-extensions:
     OverloadedStrings
+  other-extensions:
+    CPP
+    TupleSections
 
   test-module: Tests
   other-modules:
